--- a/README
+++ b/README
@@ -1,7 +1,3 @@
 This application is for and only for the "Department of Statistics and Computer Science and Mathematics Department of the Faculty of Science, Mansoura University Level 2 2017/2018" and all rights reserved to Khaled Abd-Elnabi
-![36465370_875855782602175_2070740115793117184_n](https://user-images.githubusercontent.com/28510349/42861875-4fb18afc-8a5d-11e8-951e-dc84ed36b470.jpg)
-![36530584_875859795935107_8024148693147975680_n](https://user-images.githubusercontent.com/28510349/42861877-5d7476d6-8a5d-11e8-8efe-8f2e83c225bf.jpg)
-![36448101_875859525935134_185113395400278016_n](https://user-images.githubusercontent.com/28510349/42861887-69949266-8a5d-11e8-86bd-22622f5f75a7.jpg)
-![36479470_875858292601924_8617147586391834624_n](https://user-images.githubusercontent.com/28510349/42861897-71608d56-8a5d-11e8-901e-d95b2d096d98.jpg)
-![36510055_875856622602091_8731854910053679104_n](https://user-images.githubusercontent.com/28510349/42861903-7baecd90-8a5d-11e8-99b6-0ca22c98cf0f.jpg)
-
+Image of app in the "Issues" to get feedback :) .. 
+App Link :https://drive.google.com/open?id=18Iz-IFWL-__ZNTzQsmS522G1pk0sUbrf
